# GroveOS-rs

./: .gitignore  Cargo.toml  README.md  build.bat  build.sh  shell.efi
.github/workflows/: rust.yml
kernel/: Cargo.toml  link.ld  x86_64-unknown-groveos.json
kernel/.cargo/: config.toml
kernel/src/: main.rs
kernel/src/cpu/: acpi.rs  gdt.rs  idt.rs  mod.rs
kernel/src/cpu/acpi/: apic.rs  bgrt.rs  mcfg.rs  mod.rs
kernel/src/io/: ata.rs  fat32.rs  mod.rs
kernel/src/mem/: heap.rs  mod.rs  page_allocator.rs  paging.rs
kernel/src/mem/heap/: descriptor.rs  long.rs  metadata.rs  mod.rs
kernel/src/mem/page/: allocator.rs  mod.rs  page_table.rs  physical.rs
kernel/src/screen/: font.rs  mod.rs
uefi_loader/: Cargo.toml  build.rs  rust-toolchain.toml
uefi_loader/src/: main.rs
