[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
x86_64 = { workspace = true, features = ["instructions"] }

[profile.dev]
panic = "abort"
debug = false
lto = true
codegen-units = 1
opt-level = "z"

[profile.release]
panic = "abort"
debug = false
lto = true
codegen-units = 1
opt-level = "z"