[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "kernel"
path = "src/main.rs"
test = false
doctest = false
bench = false

[dependencies]

[profile.dev]
panic = "abort"
debug = false
lto = true
codegen-units = 1
opt-level = "z"

[profile.release]
panic = "abort"
debug = false
lto = true
codegen-units = 1
opt-level = "z"